--- a/DirectorySyncer/pom.xml
+++ b/DirectorySyncer/pom.xml
@@ -10,5 +10,10 @@
     <artifactId>junit</artifactId>
     <version>4.10</version>
 </dependency>
+  	<dependency>
+  		<groupId>commons-io</groupId>
+  		<artifactId>commons-io</artifactId>
+  		<version>2.3</version>
+  	</dependency>
   </dependencies>
 </project>
