small changes like integrating directory cleanup

--- a/directorysyncergui/DirectorySyncerSwing/pom.xml
+++ b/directorysyncergui/DirectorySyncerSwing/pom.xml
@@ -9,7 +9,14 @@
 
   <name>DirectorySyncerSwing</name>
   <url>http://maven.apache.org</url>
-
+  <repositories>
+    <repository>
+      <url>http://download.java.net/maven/2/</url>
+      <id>beans-binding</id>
+      <layout>default</layout>
+      <name>Repository for library Library[beans-binding]</name>
+    </repository>
+  </repositories>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -26,6 +33,11 @@
         <artifactId>DirectorySyncer</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jdesktop</groupId>
+      <artifactId>beansbinding</artifactId>
+      <version>1.2.1</version>
     </dependency>
   </dependencies>
 </project>
